[Vivian and Michael] fixed sticky footer so that the form will not overlap to it

--- a/app/assets/stylesheets/sticky-footer.css.scss
+++ b/app/assets/stylesheets/sticky-footer.css.scss
@@ -8,6 +8,10 @@ body {
   /* Margin bottom by footer height */
   margin-bottom: 60px;
 }
+.spacer {
+  margin-bottom: 60px;
+}
+
 #footer {
   position: absolute;
   bottom: 0;
